--- a/proyectooo/proyectooo/Views/Shared/_Layout.cshtml
+++ b/proyectooo/proyectooo/Views/Shared/_Layout.cshtml
@@ -97,22 +97,14 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="alojamiento">Alojamientos</a>
+                        <a href="/Reserva/Reserva">Reserva</a>
                     </li>
-                    <li>
-                        <a href="programas">Programas</a>
-                    </li>
-                    <li>
-                        <a href="excursiones">Excursiones</a>
-                    </li>
-                    <li>
-                        <a href="destino">Destino</a>
-                    </li>
+                   
                     <li class="bold">
                         <a href="https://reservas.verticepatagonia.cl/">Reserva</a>
                     </li>
                     <li>
-                        <a href="contacto">alex chupa</a>
+                        <a href="contacto">--</a>
                     </li>
                 </ul>
             </nav>
